--- a/Imsf/src/imsf/FXMLDocument.fxml
+++ b/Imsf/src/imsf/FXMLDocument.fxml
@@ -3,30 +3,46 @@
 <?import com.gluonhq.charm.glisten.control.BottomNavigationButton?>
 <?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="479.0" prefWidth="748.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ListView id="partsID" layoutX="45.0" layoutY="70.0" prefHeight="100.0" prefWidth="60.0" />
-      <ListView id="partsName" layoutX="105.0" layoutY="70.0" prefHeight="100.0" prefWidth="60.0" />
-      <ListView id="INum" layoutX="165.0" layoutY="70.0" prefHeight="100.0" prefWidth="60.0" />
-      <ListView id="cost" layoutX="225.0" layoutY="70.0" prefHeight="100.0" prefWidth="60.0" />
-      <ListView id="productsID" layoutX="385.0" layoutY="70.0" prefHeight="100.0" prefWidth="60.0" />
-      <ListView id="productName" layoutX="445.0" layoutY="70.0" prefHeight="100.0" prefWidth="60.0" />
-      <ListView id="proINUM" layoutX="505.0" layoutY="70.0" prefHeight="100.0" prefWidth="60.0" />
-      <ListView id="ppu" layoutX="565.0" layoutY="70.0" prefHeight="100.0" prefWidth="60.0" />
-      <BottomNavigationButton id="addParts" fx:id="add" accessibleText="add" layoutX="89.0" layoutY="178.0" prefHeight="24.0" prefWidth="60.0" text="Add" />
-      <Button id="modifyParts" layoutX="161.0" layoutY="178.0" mnemonicParsing="false" text="Modify" />
-      <Button id="deleteParts" layoutX="233.0" layoutY="178.0" mnemonicParsing="false" text="Delete" />
-      <BottomNavigationButton id="addProducts" fx:id="add1" accessibleText="add" layoutX="429.0" layoutY="178.0" prefHeight="24.0" prefWidth="60.0" text="Add" />
-      <Button id="modifyProducts" layoutX="508.0" layoutY="178.0" mnemonicParsing="false" text="Modify" />
-      <Button id="deleteProducts" layoutX="573.0" layoutY="178.0" mnemonicParsing="false" text="Delete" />
-      <Button id="searchParts" fx:id="searchParts" layoutX="89.0" layoutY="35.0" mnemonicParsing="false" text="Search" />
-      <TextField id="searchPartsText" layoutX="145.0" layoutY="35.0" prefHeight="26.0" prefWidth="139.0" />
+      <BottomNavigationButton id="addParts" fx:id="add" accessibleText="add" layoutX="127.0" layoutY="311.0" prefHeight="24.0" prefWidth="60.0" text="Add" />
+      <Button id="modifyParts" layoutX="199.0" layoutY="311.0" mnemonicParsing="false" text="Modify" />
+      <Button id="deleteParts" layoutX="271.0" layoutY="311.0" mnemonicParsing="false" text="Delete" />
+      <BottomNavigationButton id="addProducts" fx:id="add1" accessibleText="add" layoutX="499.0" layoutY="311.0" prefHeight="24.0" prefWidth="60.0" text="Add" />
+      <Button id="modifyProducts" layoutX="578.0" layoutY="311.0" mnemonicParsing="false" text="Modify" />
+      <Button id="deleteProducts" layoutX="643.0" layoutY="311.0" mnemonicParsing="false" text="Delete" />
+      <Button id="searchParts" fx:id="searchParts" layoutX="66.0" layoutY="84.0" mnemonicParsing="false" text="Search" />
+      <TextField id="searchPartsText" layoutX="122.0" layoutY="84.0" prefHeight="26.0" prefWidth="139.0" />
       <Button id="searchProducts" layoutX="429.0" layoutY="36.0" mnemonicParsing="false" text="Search" />
       <TextField id="searchProductsText" layoutX="485.0" layoutY="36.0" prefHeight="26.0" prefWidth="139.0" />
-      <Button id="exit" layoutX="539.0" layoutY="240.0" mnemonicParsing="false" text="Exit" />
+      <Button id="exit" layoutX="609.0" layoutY="373.0" mnemonicParsing="false" text="Exit" />
+      <TableView layoutX="24.0" layoutY="133.0" prefHeight="162.0" prefWidth="298.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="C1" />
+            <TableColumn prefWidth="75.0" text="C2" />
+          <TableColumn prefWidth="75.0" text="C3" />
+            <TableColumn prefWidth="75.0" text="C4" />
+        </columns>
+      </TableView>
+      <TableView layoutX="396.0" layoutY="133.0" prefHeight="162.0" prefWidth="298.0">
+         <columns>
+            <TableColumn prefWidth="75.0" text="C1" />
+            <TableColumn prefWidth="75.0" text="C2" />
+            <TableColumn prefWidth="75.0" text="C3" />
+            <TableColumn prefWidth="75.0" text="C4" />
+         </columns>
+      </TableView>
+      <Label layoutX="60.0" layoutY="9.0" text="Amour Inventory Management System">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
