--- a/Imsf/src/imsf/FXMLDocument.fxml
+++ b/Imsf/src/imsf/FXMLDocument.fxml
@@ -18,25 +18,25 @@
       <BottomNavigationButton id="addProducts" fx:id="add1" accessibleText="add" layoutX="499.0" layoutY="311.0" prefHeight="24.0" prefWidth="60.0" text="Add" />
       <Button id="modifyProducts" layoutX="578.0" layoutY="311.0" mnemonicParsing="false" text="Modify" />
       <Button id="deleteProducts" layoutX="643.0" layoutY="311.0" mnemonicParsing="false" text="Delete" />
-      <Button id="searchParts" fx:id="searchParts" layoutX="66.0" layoutY="84.0" mnemonicParsing="false" text="Search" />
-      <TextField id="searchPartsText" layoutX="122.0" layoutY="84.0" prefHeight="26.0" prefWidth="139.0" />
-      <Button id="searchProducts" layoutX="429.0" layoutY="36.0" mnemonicParsing="false" text="Search" />
-      <TextField id="searchProductsText" layoutX="485.0" layoutY="36.0" prefHeight="26.0" prefWidth="139.0" />
+      <Button id="searchParts" fx:id="searchParts" layoutX="125.0" layoutY="96.0" mnemonicParsing="false" text="Search" />
+      <TextField id="searchPartsText" layoutX="181.0" layoutY="96.0" prefHeight="26.0" prefWidth="139.0" />
+      <Button id="searchProducts" layoutX="499.0" layoutY="96.0" mnemonicParsing="false" text="Search" />
+      <TextField id="searchProductsText" layoutX="555.0" layoutY="96.0" prefHeight="26.0" prefWidth="139.0" />
       <Button id="exit" layoutX="609.0" layoutY="373.0" mnemonicParsing="false" text="Exit" />
       <TableView layoutX="24.0" layoutY="133.0" prefHeight="162.0" prefWidth="298.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-            <TableColumn prefWidth="75.0" text="C2" />
-          <TableColumn prefWidth="75.0" text="C3" />
-            <TableColumn prefWidth="75.0" text="C4" />
+          <TableColumn id="partId" prefWidth="53.60000801086426" text="Part ID" />
+            <TableColumn id="partName" prefWidth="70.40001678466797" text="Part Name" />
+          <TableColumn id="partCount" prefWidth="109.5999755859375" text="Inventory Count" />
+            <TableColumn id="partCost" prefWidth="67.20001220703125" text="Cost" />
         </columns>
       </TableView>
-      <TableView layoutX="396.0" layoutY="133.0" prefHeight="162.0" prefWidth="298.0">
+      <TableView layoutX="372.0" layoutY="133.0" prefHeight="162.0" prefWidth="346.0">
          <columns>
-            <TableColumn prefWidth="75.0" text="C1" />
-            <TableColumn prefWidth="75.0" text="C2" />
-            <TableColumn prefWidth="75.0" text="C3" />
-            <TableColumn prefWidth="75.0" text="C4" />
+            <TableColumn id="proId" prefWidth="75.0" text="Product Id" />
+            <TableColumn id="proName" prefWidth="98.39999389648438" text="Product Name" />
+            <TableColumn id="proCount" prefWidth="104.80010986328125" text="Inventory Count" />
+            <TableColumn id="proCost" prefWidth="68.0" text="Unit Price" />
          </columns>
       </TableView>
       <Label layoutX="60.0" layoutY="9.0" text="Amour Inventory Management System">
