--- a/InventorySystem/src/Controllers/ims.fxml
+++ b/InventorySystem/src/Controllers/ims.fxml
@@ -18,11 +18,11 @@
       <Button id="modifyProducts" layoutX="578.0" layoutY="311.0" mnemonicParsing="false" text="Modify" />
       <Button id="deleteProducts" layoutX="643.0" layoutY="311.0" mnemonicParsing="false" text="Delete" />
       <Button id="searchParts" fx:id="partsSearch" layoutX="125.0" layoutY="96.0" mnemonicParsing="false" text="Search" />
-      <TextField id="partsSearchField" fx:id="partsSearch" layoutX="181.0" layoutY="96.0" prefHeight="26.0" prefWidth="139.0" />
+      <TextField id="partsSearchFieldMain" fx:id="partsSearchBox" layoutX="181.0" layoutY="96.0" prefHeight="26.0" prefWidth="139.0" />
       <Button id="searchProducts" layoutX="499.0" layoutY="96.0" mnemonicParsing="false" text="Search" />
-      <TextField id="proSearchField" fx:id="productSearch" layoutX="555.0" layoutY="96.0" prefHeight="26.0" prefWidth="139.0" />
+      <TextField id="partsSearchFieldMain" fx:id="productSearchBox" layoutX="555.0" layoutY="96.0" prefHeight="26.0" prefWidth="139.0" />
       <Button id="exit" layoutX="609.0" layoutY="373.0" mnemonicParsing="false" text="Exit" />
-      <TableView layoutX="24.0" layoutY="133.0" prefHeight="162.0" prefWidth="298.0">
+      <TableView fx:id="partsTable" layoutX="24.0" layoutY="133.0" prefHeight="162.0" prefWidth="298.0">
         <columns>
           <TableColumn id="partId" prefWidth="53.60000801086426" text="Part ID" />
             <TableColumn id="partName" prefWidth="70.40001678466797" text="Part Name" />
@@ -30,7 +30,7 @@
             <TableColumn id="partCost" prefWidth="67.20001220703125" text="Cost" />
         </columns>
       </TableView>
-      <TableView layoutX="372.0" layoutY="133.0" prefHeight="162.0" prefWidth="346.0">
+      <TableView fx:id="productTable" layoutX="372.0" layoutY="133.0" prefHeight="162.0" prefWidth="346.0">
          <columns>
             <TableColumn id="proId" prefWidth="75.0" text="Product Id" />
             <TableColumn id="proName" prefWidth="98.39999389648438" text="Product Name" />
