--- a/InventorySystem/src/Controllers/ims.fxml
+++ b/InventorySystem/src/Controllers/ims.fxml
@@ -1,47 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.BottomNavigationButton?>
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="479.0" prefWidth="748.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="inventorysystem.GUI.IMSguiController">
+<AnchorPane fx:id="Ims" maxHeight="480.0" maxWidth="949.0" minHeight="480.0" minWidth="949.0" prefHeight="480.0" prefWidth="949.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <BottomNavigationButton id="addParts" fx:id="partAdd" accessibleText="add" layoutX="127.0" layoutY="311.0" prefHeight="24.0" prefWidth="60.0" text="Add" />
-      <Button id="modifyParts" layoutX="199.0" layoutY="311.0" mnemonicParsing="false" text="Modify" />
-      <Button id="deleteParts" layoutX="271.0" layoutY="311.0" mnemonicParsing="false" text="Delete" />
-      <BottomNavigationButton id="addProducts" fx:id="prodcutAdd" accessibleText="add" layoutX="499.0" layoutY="311.0" prefHeight="24.0" prefWidth="60.0" text="Add" />
-      <Button id="modifyProducts" layoutX="578.0" layoutY="311.0" mnemonicParsing="false" text="Modify" />
-      <Button id="deleteProducts" layoutX="643.0" layoutY="311.0" mnemonicParsing="false" text="Delete" />
-      <Button id="searchParts" fx:id="partsSearch" layoutX="125.0" layoutY="96.0" mnemonicParsing="false" text="Search" />
-      <TextField id="partsSearchFieldMain" fx:id="partsSearchBox" layoutX="181.0" layoutY="96.0" prefHeight="26.0" prefWidth="139.0" />
-      <Button id="searchProducts" layoutX="499.0" layoutY="96.0" mnemonicParsing="false" text="Search" />
-      <TextField id="partsSearchFieldMain" fx:id="productSearchBox" layoutX="555.0" layoutY="96.0" prefHeight="26.0" prefWidth="139.0" />
-      <Button id="exit" layoutX="609.0" layoutY="373.0" mnemonicParsing="false" text="Exit" />
-      <TableView fx:id="partsTable" layoutX="24.0" layoutY="133.0" prefHeight="162.0" prefWidth="298.0">
-        <columns>
-          <TableColumn id="partId" prefWidth="53.60000801086426" text="Part ID" />
-            <TableColumn id="partName" prefWidth="70.40001678466797" text="Part Name" />
-          <TableColumn id="partCount" prefWidth="109.5999755859375" text="Inventory Count" />
-            <TableColumn id="partCost" prefWidth="67.20001220703125" text="Cost" />
-        </columns>
-      </TableView>
-      <TableView fx:id="productTable" layoutX="372.0" layoutY="133.0" prefHeight="162.0" prefWidth="346.0">
-         <columns>
-            <TableColumn id="proId" prefWidth="75.0" text="Product Id" />
-            <TableColumn id="proName" prefWidth="98.39999389648438" text="Product Name" />
-            <TableColumn id="proCount" prefWidth="104.80010986328125" text="Inventory Count" />
-            <TableColumn id="proCost" prefWidth="68.0" text="Unit Price" />
-         </columns>
-      </TableView>
-      <Label layoutX="60.0" layoutY="9.0" text="Amour Inventory Management System">
+      <MenuBar fx:id="mainMenuBar" prefHeight="32.0" prefWidth="950.0" AnchorPane.bottomAnchor="448.0">
+         <menus>
+            <Menu mnemonicParsing="false" text="File">
+               <items>
+                  <MenuItem fx:id="menuExitItem" mnemonicParsing="false" onAction="#exitProgram" text="Exit" />
+               </items>
+            </Menu>
+         </menus>
+      </MenuBar>
+      <Label fx:id="mainTitleLabel" layoutX="14.0" layoutY="45.0" style="-fx-border-color: black; -fx-border-width: 1; -fx-label-padding: 4;" text="Inventory Management System" textFill="#433f3f">
          <font>
-            <Font size="16.0" />
+            <Font name="DejaVu Serif Bold" size="20.0" />
          </font>
       </Label>
+      <Button layoutX="893.0" layoutY="440.0" mnemonicParsing="false" onMouseClicked="#exitProgramButton" text="Exit" />
+      <AnchorPane id="outterPartsBoxMain" layoutX="14.0" layoutY="126.0" prefHeight="300.0" prefWidth="455.0" style="-fx-border-radius: 20; -fx-border-color: gray;">
+         <children>
+            <Label id="partsLabelMain" style="-fx-label-padding: 10;" text="Parts">
+               <font>
+                  <Font name="System Bold Italic" size="18.0" />
+               </font>
+            </Label>
+            <TextField id="partsSearchFieldMain" fx:id="partSearchBox" layoutX="176.0" layoutY="20.0" onMouseClicked="#clearText" prefHeight="22.0" prefWidth="182.0" style="-fx-padding: 2; -fx-border-color: gray;" />
+            <Button fx:id="addPartButton" layoutX="14.0" layoutY="253.0" mnemonicParsing="false" onMouseClicked="#addPart" style="-fx-padding: 10;" text="Add" />
+            <Button layoutX="294.0" layoutY="253.0" mnemonicParsing="false" onMouseClicked="#modifyPart" style="-fx-padding: 10;" text="Modify" />
+            <Button layoutX="378.0" layoutY="253.0" mnemonicParsing="false" onMouseClicked="#deletePart" style="-fx-padding: 10;" text="Delete" />
+            <TableView fx:id="partsTable" layoutX="10.0" layoutY="58.0" prefHeight="185.0" prefWidth="435.0">
+
+               <items>
+
+               </items>
+               <columns>
+                  <TableColumn fx:id="partIDColumn" prefWidth="93.0" text="Part ID">
+                     <cellValueFactory><PropertyValueFactory property="partID" />
+                     </cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="partNameColumn" prefWidth="118.0" text="Part Name">
+                     <cellValueFactory>
+                        <PropertyValueFactory property="Name" />
+                     </cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="partCountColumn" prefWidth="106.0" text="Inv Count">
+                     <cellValueFactory>
+                        <PropertyValueFactory property="InStock" />
+                     </cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="partPriceColumn" prefWidth="118.0" text="Part Price">
+                     <cellValueFactory>
+                        <PropertyValueFactory property="Price" />
+                     </cellValueFactory>
+                  </TableColumn>
+               </columns>
+            </TableView>
+            <Button layoutX="373.0" layoutY="18.0" mnemonicParsing="false" onMouseClicked="#searchForPart" text="Search" />
+         </children>
+      </AnchorPane>
+      <AnchorPane id="outterPRoductsBoxMain" layoutX="481.0" layoutY="125.0" prefHeight="300.0" prefWidth="455.0" style="-fx-border-radius: 20; -fx-border-color: gray;">
+         <children>
+            <Label id="productsLabelMain" style="-fx-label-padding: 10;" text="Products">
+               <font>
+                  <Font name="System Bold Italic" size="18.0" />
+               </font>
+            </Label>
+            <TextField id="partsSearchFieldMain" fx:id="productSearchBox" layoutX="176.0" layoutY="20.0" onMouseClicked="#clearText" prefHeight="22.0" prefWidth="182.0" style="-fx-padding: 2; -fx-border-color: gray;" />
+            <Button layoutX="378.0" layoutY="253.0" mnemonicParsing="false" onMouseClicked="#deleteProduct" style="-fx-padding: 10;" text="Delete" />
+            <Button layoutX="294.0" layoutY="253.0" mnemonicParsing="false" onMouseClicked="#modifyProduct" style="-fx-padding: 10;" text="Modify" />
+            <Button fx:id="addProductButton" layoutX="14.0" layoutY="253.0" mnemonicParsing="false" onMouseClicked="#addProduct" style="-fx-padding: 10;" text="Add" />
+            <TableView fx:id="productsTable" layoutX="10.0" layoutY="58.0" prefHeight="185.0" prefWidth="435.0">
+               <columns>
+                  <TableColumn fx:id="productIDColumn" prefWidth="93.0" text="Product ID">
+                     <cellValueFactory><PropertyValueFactory property="ProductID" />
+                     </cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="productNameColumn" prefWidth="118.0" text="Product Name">
+                     <cellValueFactory><PropertyValueFactory property="Name" />
+                     </cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="productCountColumn" prefWidth="106.0" text="Inv Count">
+                     <cellValueFactory><PropertyValueFactory property="InStock" />
+                     </cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="productPriceColumn" prefWidth="118.0" text="Product Price">
+                     <cellValueFactory><PropertyValueFactory property="Price" />
+                     </cellValueFactory>
+                  </TableColumn>
+               </columns>
+            </TableView>
+            <Button layoutX="373.0" layoutY="18.0" mnemonicParsing="false" onMouseClicked="#searchForProduct" text="Search" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
