--- a/SupplyInventory/src/views/AddPart.fxml
+++ b/SupplyInventory/src/views/AddPart.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
@@ -9,76 +9,39 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="535.0" prefWidth="475.0" style="-fx-background-color: lightgreen;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AddPartController">
-    <children>
-        <Label layoutX="16.0" layoutY="14.0" style="-fx-label-padding: 0;" text="Add Part">
-            <font>
-                <Font name="System Bold" size="28.0" />
-            </font>
-        </Label>
-        <RadioButton fx:id="inHouseRadio" layoutX="188.0" layoutY="70.0" mnemonicParsing="false" onMouseClicked="#selectInHouse" text="In House">
-            <font>
-                <Font size="14.0" />
-            </font>
-            <toggleGroup>
-                <ToggleGroup fx:id="addPartToggleGroup" />
-            </toggleGroup>
-        </RadioButton>
-        <RadioButton fx:id="outSourcedRadio" layoutX="275.0" layoutY="70.0" mnemonicParsing="false" onMouseClicked="#selectOutSourced" text="Out Sourced" toggleGroup="$addPartToggleGroup">
-            <padding>
-                <Insets left="20.0" />
-            </padding>
-            <font>
-                <Font size="14.0" />
-            </font>
-        </RadioButton>
-        <TextField fx:id="addID" editable="false" layoutX="188.0" layoutY="115.0" onMouseEntered="#idDisabled" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: cdcdcd;" />
-        <TextField fx:id="addName" layoutX="188.0" layoutY="165.0" onMouseClicked="#clearTextField" prefHeight="40.0" prefWidth="150.0" />
-        <TextField fx:id="addCount" layoutX="188.0" layoutY="215.0" onMouseClicked="#clearTextField" prefHeight="40.0" prefWidth="150.0" />
-        <TextField fx:id="addPrice" layoutX="188.0" layoutY="265.0" onMouseClicked="#clearTextField" prefHeight="40.0" prefWidth="150.0" />
-        <TextField fx:id="addMax" layoutX="188.0" layoutY="315.0" onMouseClicked="#clearTextField" prefHeight="40.0" prefWidth="75.0" />
-        <TextField fx:id="company" layoutX="188.0" layoutY="365.0" onMouseClicked="#clearTextField" prefHeight="40.0" prefWidth="150.0" />
-        <TextField fx:id="addMin" layoutX="369.0" layoutY="315.0" onMouseClicked="#clearTextField" prefHeight="40.0" prefWidth="75.0" />
-        <Label layoutX="311.0" layoutY="326.0" text="Min">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Label>
-        <Label layoutX="63.0" layoutY="126.0" text="ID">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Label>
-        <Label layoutX="63.0" layoutY="176.0" text="Name">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Label>
-        <Label layoutX="63.0" layoutY="226.0" text="supply">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Label>
-        <Label layoutX="63.0" layoutY="276.0" text="Price">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Label>
-        <Label layoutX="63.0" layoutY="327.0" text="Max">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Label>
-        <Label fx:id="companyLabel" layoutX="63.0" layoutY="376.0" text="Company Name">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Label>
-        <Button fx:id="addCancel" layoutX="394.0" layoutY="485.0" mnemonicParsing="false" onMouseClicked="#cancelAddPart" prefHeight="36.0" prefWidth="67.0" text="Cancel" />
-        <Button fx:id="addSave" layoutX="183.0" layoutY="445.0" mnemonicParsing="false" onMouseClicked="#saveAddPart" prefHeight="40.0" prefWidth="110.0" text="Save">
-            <font>
-                <Font size="16.0" />
-            </font>
-        </Button>
-    </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="424.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AddPartController">
+   <children>
+      <Label layoutX="171.0" layoutY="41.0" text="Add Part" textFill="#30974f">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </Label>
+      <RadioButton fx:id="partInhouse" layoutX="86.0" layoutY="86.0" mnemonicParsing="false" onAction="#radioButtonSelected" text="In-House">
+         <toggleGroup>
+            <ToggleGroup fx:id="partType" />
+         </toggleGroup></RadioButton>
+      <RadioButton fx:id="partOutsourced" layoutX="239.0" layoutY="86.0" mnemonicParsing="false" onAction="#radioButtonSelected" text="Outsourced" toggleGroup="$partType" />
+      <Label layoutX="52.0" layoutY="149.0" text="ID" />
+      <TextField fx:id="partID" disable="true" editable="false" layoutX="129.0" layoutY="144.0" />
+      <Label layoutX="52.0" layoutY="206.0" text="Part Name" />
+      <TextField fx:id="partName" layoutX="129.0" layoutY="201.0" />
+      <Label layoutX="52.0" layoutY="260.0" text="Inventory" />
+      <TextField fx:id="partsInStock" layoutX="129.0" layoutY="255.0" />
+      <Label layoutX="52.0" layoutY="317.0" text="Price" />
+      <TextField fx:id="partPrice" layoutX="129.0" layoutY="312.0" />
+      <Label layoutX="52.0" layoutY="374.0" text="Min." />
+      <TextField fx:id="partMinStock" layoutX="129.0" layoutY="369.0" prefHeight="27.0" prefWidth="54.0" />
+      <Label layoutX="196.0" layoutY="374.0" text="Max." />
+      <TextField fx:id="partMaxStock" layoutX="242.0" layoutY="369.0" prefHeight="27.0" prefWidth="54.0" />
+      <Label fx:id="partCompanyNameLabel" layoutX="51.0" layoutY="423.0" prefHeight="17.0" prefWidth="65.0" text="Company" visible="false" />
+      <TextField fx:id="partCompanyName" layoutX="129.0" layoutY="418.0" visible="false" />
+      <Label fx:id="partMachineIDLabel" layoutX="51.0" layoutY="423.0" text="Machine ID" visible="false" />
+      <TextField fx:id="partMachineID" layoutX="129.0" layoutY="418.0" visible="false" />
+      <ButtonBar layoutX="235.0" layoutY="453.0" prefHeight="40.0" prefWidth="167.0">
+        <buttons>
+          <Button mnemonicParsing="false" onAction="#saveButtonPressed" text="Save" />
+            <Button mnemonicParsing="false" onAction="#cancelButtonPressed" text="Cancel" />
+        </buttons>
+      </ButtonBar>
+   </children>
 </AnchorPane>
