--- a/SupplyInventory/src/views/MainScreen.fxml
+++ b/SupplyInventory/src/views/MainScreen.fxml
@@ -46,21 +46,21 @@
                    
                     </items>
                <columns>
-                  <TableColumn fx:id="partID" prefWidth="93.0" text="Part ID">
+                  <TableColumn fx:id="partIDCol" prefWidth="93.0" text="Part ID">
                        <cellValueFactory><PropertyValueFactory property="partID" />
                        </cellValueFactory>
                   </TableColumn>
-                  <TableColumn fx:id="partName" prefWidth="118.0" text="Part Name">
+                  <TableColumn fx:id="partNameCol" prefWidth="118.0" text="Part Name">
                      <cellValueFactory>
                         <PropertyValueFactory property="Name" />
                      </cellValueFactory>
                   </TableColumn>
-                  <TableColumn fx:id="partSupply" prefWidth="106.0" text="supply Count">
+                  <TableColumn fx:id="partSupplyCol" prefWidth="106.0" text="supply Count">
                      <cellValueFactory>
                         <PropertyValueFactory property="InStock" />
                      </cellValueFactory>
                   </TableColumn>
-                  <TableColumn fx:id="partPrice" prefWidth="118.0" text="Part Price">
+                  <TableColumn fx:id="partPriceCol" prefWidth="118.0" text="Part Price">
                      <cellValueFactory>
                         <PropertyValueFactory property="Price" />
                      </cellValueFactory>
@@ -83,19 +83,19 @@
                 <Button fx:id="addProductButton" layoutX="14.0" layoutY="253.0" mnemonicParsing="false" onMouseClicked="#addProduct" style="-fx-padding: 10;" text="Add" />
                 <TableView fx:id="productsTable" layoutX="10.0" layoutY="58.0" prefHeight="185.0" prefWidth="435.0">
                     <columns>
-                        <TableColumn fx:id="productID" prefWidth="93.0" text="Product ID">
+                        <TableColumn fx:id="productIDCol" prefWidth="93.0" text="Product ID">
                             <cellValueFactory><PropertyValueFactory property="ProductID" />
                             </cellValueFactory>
                         </TableColumn>
-                        <TableColumn fx:id="productName" prefWidth="118.0" text="Product Name">
+                        <TableColumn fx:id="productNameCol" prefWidth="118.0" text="Product Name">
                             <cellValueFactory><PropertyValueFactory property="Name" />
                             </cellValueFactory>
                         </TableColumn>
-                        <TableColumn fx:id="productCount" prefWidth="106.0" text="supply Count">
+                        <TableColumn fx:id="productCountCol" prefWidth="106.0" text="supply Count">
                             <cellValueFactory><PropertyValueFactory property="InStock" />
                             </cellValueFactory>
                         </TableColumn>
-                        <TableColumn fx:id="productPrice" prefWidth="118.0" text="Product Price">
+                        <TableColumn fx:id="productPriceCol" prefWidth="118.0" text="Product Price">
                             <cellValueFactory><PropertyValueFactory property="Price" />
                             </cellValueFactory>
                         </TableColumn>
