--- a/InventorySupply/src/Views/MainScreen.fxml
+++ b/InventorySupply/src/Views/MainScreen.fxml
@@ -29,10 +29,10 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button layoutX="145.0" layoutY="286.0" maxHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#addPart" prefHeight="25.0" text="Add" />
-            <Button layoutX="225.0" layoutY="286.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#changePart" prefHeight="25.0" text="Modify" />
-            <Button layoutX="305.0" layoutY="286.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#deletePart" prefHeight="25.0" text="Delete" />
-            <Button layoutX="136.0" layoutY="46.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#searchParts" prefHeight="25.0" text="Search" />
+            <Button layoutX="145.0" layoutY="286.0" maxHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#partsAdd" prefHeight="25.0" text="Add" />
+            <Button layoutX="225.0" layoutY="286.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#partsChange" prefHeight="25.0" text="Modify" />
+            <Button layoutX="305.0" layoutY="286.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#partsDelete" prefHeight="25.0" text="Delete" />
+            <Button layoutX="136.0" layoutY="46.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#partsSearch" prefHeight="25.0" text="Search" />
             <TextField fx:id="searchPart" layoutX="216.0" layoutY="46.0" />
          </children>
          <padding>
@@ -56,10 +56,10 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button layoutX="150.0" layoutY="285.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#addProduct" prefHeight="25.0" text="Add" />
-            <Button layoutX="230.0" layoutY="285.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#changeProduct" prefHeight="25.0" text="Modify" />
-            <Button layoutX="310.0" layoutY="285.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#deleteProduct" prefHeight="25.0" text="Delete" />
-            <Button layoutX="146.0" layoutY="44.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#searchProducts" prefHeight="25.0" text="Search" />
+            <Button layoutX="150.0" layoutY="285.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#productAdd" prefHeight="25.0" text="Add" />
+            <Button layoutX="230.0" layoutY="285.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#productChange" prefHeight="25.0" text="Modify" />
+            <Button layoutX="310.0" layoutY="285.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#productDelete" prefHeight="25.0" text="Delete" />
+            <Button layoutX="146.0" layoutY="44.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#productsSearch" prefHeight="25.0" text="Search" />
             <TextField fx:id="searchProduct" layoutX="226.0" layoutY="44.0" />
          </children>
          <padding>
