--- a/InvSupply/src/Views/ProductUpdate.fxml
+++ b/InvSupply/src/Views/ProductUpdate.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="515.0" prefWidth="793.0" styleClass="root" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ProductScreenController">
+<AnchorPane id="AnchorPane" prefHeight="515.0" prefWidth="793.0" styleClass="root" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ProductUpdateController">
    <children>
       <GridPane layoutX="37.0" layoutY="120.0" prefHeight="180.0" prefWidth="241.0">
          <columnConstraints>
