--- a/InvSupply/src/Views/MainScreen.fxml
+++ b/InvSupply/src/Views/MainScreen.fxml
@@ -35,7 +35,7 @@
             <HBox layoutX="260.0" layoutY="285.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="231.0">
                <children>
                   <Button maxHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#addButton" prefHeight="25.0" text="Add" />
-                  <Button maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#ModifyButton" prefHeight="25.0" text="Modify">
+                  <Button maxHeight="-Infinity" minHeight="-Infinity" minWidth="60.0" mnemonicParsing="false" onAction="#modifyButton" prefHeight="25.0" text="Modify">
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
